# hasbase

./: .env  .env.desktop  .env.desktop.example  .env.mobile  .env.mobile.example  .gitignore  README.md  bun.lockb  eslint.json  index.html  kill-port.js  next.config.ts  package.json  python-env.sh  requirements.txt  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
src/: App.tsx  MyComponent.tsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop.rs  lib.rs  main.rs  mobile.rs
src/app/: layout.tsx  page.tsx
src/backend/: config.ts  db.ts  index.ts  model.ts
src/backend/routes/v1/: chat.ts  document.ts  index.ts  user.ts
src/backend/test/: index.ts
src/backend/utils/: chat.ts
src/components/: AlertDialog.tsx  ChatService.tsx  ChatView.tsx  CustomSelect.tsx  ListData.tsx  ReadEnv.tsx  app-sidebar.tsx  filemanager.tsx  selectModel.tsx  webcam.tsx
src/context/: AiProvider.tsx  DbProvider.tsx  mobileProvider.tsx
src/hooks/: useGetChatMemrory.tsx
src/lib/: pglite.tsx
src/platform/desktop/components/: ApiKeyModal.tsx  ChatMessage.tsx  DocumentList.tsx  FileUpload.tsx  ModelConfigModal.tsx
src/platform/desktop/core/: config.ts
src/platform/desktop/layout/: HomeLayout.tsx
src/platform/desktop/lib/: api.ts  indexdb.ts
src/platform/desktop/pages/: HomePage.tsx
src/service/: aiService.ts  index.ts
src/store/: modelStore.ts
src/utils/: env.ts
styles/: globals.css
(+13 files in other folders)
