[package]
name = "hasbase"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hasbase_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hasbase"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = 0
split-debuginfo = "unpacked"
debug-assertions = false
overflow-checks = false
incremental = true
